--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 
 [dependencies]
 rocket = { version = "0.5.0-rc.1", features=["json", "msgpack", "uuid"]}
-diesel = { version = "1", features = ["postgres"] }
+diesel = { version = "1", features = ["postgres", "chrono"] }
+chrono = { version = "0.4", features = ["serde"]}
 dotenv = "0.15.0"
 
 [dependencies.rocket_sync_db_pools]
