--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ diesel = { version = "1", features = ["postgres", "chrono"] }
 chrono = { version = "0.4", features = ["serde"]}
 dotenv = "0.15.0"
 
+# aws-config = "0.0.23-alpha"
+# aws-sdk-s3 = "0.0.23-alpha" 
+# aws-types = "0.0.23-alpha"
+# tokio = { version = "1", features = ["full"] }
 [dependencies.rocket_sync_db_pools]
 version = "0.1.0-rc.1"
 features = ["diesel_postgres_pool"]
